--- a/src/templates/side-menu-left.html
+++ b/src/templates/side-menu-left.html
@@ -22,7 +22,7 @@
 		<ion-content>
 			<div class="list">
 				<a menu-close class="item item-icon-left" href="#/route/dashboard/home">
-					<i class="icon ion-ios7-speedometer-outline"></i>
+					<i class="icon ion-ios-speedometer"></i>
 					Dashboard
 				</a>
 	
@@ -32,19 +32,29 @@
 					<span class="badge badge-balanced">{{devices.length}}</span>
 				</a>
 				<a menu-close class="item item-icon-left" href="#/route/locations">
-					<i class="icon ion-ios7-location"></i>
+					<i class="icon ion-ios-location"></i>
 					Locations
 					<span class="badge badge-balanced">{{locations.length}}</span>
 				</a>
 				<a menu-close class="item item-icon-left" href="#/route/products">
-					<i class="icon ion-ios7-location"></i>
+					<i class="icon ion-coffee"></i>
 					Products
 					<span class="badge badge-balanced">{{products.length}}</span>
 				</a>
 				<a menu-close class="item item-icon-left" href="#/route/users">
-					<i class="icon ion-ios7-people"></i>
+					<i class="icon ion-ios-people"></i>
 					Users
 					<span class="badge badge-balanced">{{users.length}}</span>
+				</a>
+				<a menu-close class="item item-icon-left" href="#/route/servers">
+					<i class="icon ion-ios-albums"></i>
+					Servers
+					<span class="badge badge-balanced">{{servers.length}}</span>
+				</a>
+				<a menu-close class="item item-icon-left" href="#/route/people">
+					<i class="icon ion-ios-people-outline"></i>
+					People
+					<span class="badge badge-balanced">{{people.length}}</span>
 				</a>
 				<div class="item item-divider">
 					Quick Actions
@@ -58,17 +68,25 @@
 					Add Action
 				</a> -->
 				<a menu-close class="item item-icon-left" href="#/route/add-product">
-					<i class="icon ion-ios7-plus-empty"></i>
+					<i class="icon ion-ios-plus-empty"></i>
 					Add Product
 				</a>
 				<a menu-close class="item item-icon-left" href="#/route/add-location">
-					<i class="icon ion-ios7-plus-empty"></i>
+					<i class="icon ion-ios-plus"></i>
 					Add Location
 				</a>
 				<a menu-close class="item item-icon-left" href="#/route/add-user">
-					<i class="icon ion-ios7-personadd"></i>
+					<i class="icon ion-ios-personadd"></i>
 					Add User
 				</a>
+				<a menu-close class="item item-icon-left" href="#/route/add-server">
+					<i class="icon ion-android-desktop"></i>
+					Add Server
+				</a>
+				<a menu-close class="item item-icon-left" href="#/route/add-person">
+					<i class="icon ion-ios-personadd-outline"></i>
+					Add Person
+				</a>				
 			</div>
 		</ion-content>
 	</ion-side-menu>
