--- a/src/libs/ionic/ionic.css
+++ b/src/libs/ionic/ionic.css
@@ -24,8 +24,8 @@
 */
 @font-face {
   font-family: "Ionicons";
-  src: url("./fonts/ionicons.eot?v=2.0.1");
-  src: url("./fonts/ionicons.eot?v=2.0.1#iefix") format("embedded-opentype"), url("./fonts/ionicons.ttf?v=2.0.1") format("truetype"), url("./fonts/ionicons.woff?v=2.0.1") format("woff"), url("./fonts/ionicons.woff") format("woff"), url("./fonts/ionicons.svg?v=2.0.1#Ionicons") format("svg");
+  src: url("../fonts/ionicons.eot?v=2.0.1");
+  src: url("../fonts/ionicons.eot?v=2.0.1#iefix") format("embedded-opentype"), url("../fonts/ionicons.ttf?v=2.0.1") format("truetype"), url("../fonts/ionicons.woff?v=2.0.1") format("woff"), url("../fonts/ionicons.woff") format("woff"), url("../fonts/ionicons.svg?v=2.0.1#Ionicons") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -5038,9 +5038,7 @@ a.item-content {
 .item-thumbnail-left, .item-thumbnail-left .item-content {
   padding-top: 8px;
   padding-left: 106px;
-  min-height: 100px;
-  /*min-height: 60px;*/
-  }
+  min-height: 100px; }
   .item-thumbnail-left > img:first-child, .item-thumbnail-left .item-image, .item-thumbnail-left .item-content > img:first-child, .item-thumbnail-left .item-content .item-image {
     position: absolute;
     top: 10px;
