--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -27,7 +27,7 @@
 			<div class="col-lg-50 padding-horizontal">
 				<div class="item item-icon-left" on-tap="deviceTap('router.device', device)">
 					<i class="icon" ng-class="device.icon"></i>
-					{{ device.name }}
+					{{ device.devicename }}
 					<span class="item-note" ng-class="device.color">
 					{{ device.status }}
 					</span>
