--- a/src/templates/devices.html
+++ b/src/templates/devices.html
@@ -31,7 +31,7 @@
 		
 		<ion-list can-swipe="listCanSwipe">
 			
-			<ion-item ng-repeat="device in devices">
+			<ion-item ng-repeat="device in devices | orderBy:'devicename':reverse">
 				<div on-tap="deviceTap('router.device', device)">
 					
 					<i class="icon" ng-class="device.icon"></i>
