--- a/src/templates/servers.html
+++ b/src/templates/servers.html
@@ -24,7 +24,7 @@
      </ion-refresher>		
 			<ion-list can-swipe="listCanSwipe">
 			
-			<ion-item ng-repeat="server in servers">
+			<ion-item ng-repeat="server in servers | orderBy:'name':reverse">
 				<div on-tap="deviceTap('router.addServer', server)">
 					
 					<i class="icon" ng-class="location.name"></i>
