--- a/src/templates/side-menu-left.html
+++ b/src/templates/side-menu-left.html
@@ -54,7 +54,7 @@
 				<a menu-close class="item item-icon-left" href="#/route/people">
 					<i class="icon ion-ios-people-outline"></i>
 					People
-					<span class="badge badge-balanced">{{people.length}}</span>
+					<span class="badge badge-balanced">{{totalPeople}}</span>
 				</a>
 				<div class="item item-divider">
 					Quick Actions
