--- a/src/css/base.css
+++ b/src/css/base.css
@@ -24,6 +24,9 @@
   background-color: #ff4943;
   color: #fff;
 }
+.popup {
+  width: 350px!important;
+}
 /*.badge.badge-balanced{
   border-color: #ff4943;
   background-color: #ff4943;
