--- a/src/less/base.less
+++ b/src/less/base.less
@@ -30,6 +30,10 @@
     color: #fff;
 }
 
+.popup {
+  width: 350px!important;
+}
+
 /*.badge.badge-balanced{
   border-color: #ff4943;
   background-color: #ff4943;
