--- a/src/templates/add-product.html
+++ b/src/templates/add-product.html
@@ -31,7 +31,7 @@
 			</div>
 			<div class="padding">
 				<button class="button button-balanced">
-					Add Product
+					Add
 				</button>
 			</div>
 		</form>
