--- a/src/templates/add-user.html
+++ b/src/templates/add-user.html
@@ -8,6 +8,11 @@
 				<label class="item item-input">
 					<input type="text" placeholder="Username" ng-model="newuser.username">
 				</label>
+				
+				<label class="item item-input">
+					<input type="password" placeholder="Password" ng-model="newuser.password">
+				</label>
+				
 				<label class="item item-input">
 					<input type="email" placeholder="Email" ng-model="newuser.email">
 				</label>
