--- a/src/templates/edit-user.html
+++ b/src/templates/edit-user.html
@@ -10,6 +10,11 @@
 				</label>
 				
 				<label class="item item-input item-stacked-label">
+					<span class="input-label">Password</span>
+					<input type="text" placeholder="Password" ng-model="newuser.password">
+				</label>
+				
+				<label class="item item-input item-stacked-label">
 					<span class="input-label">Email</span>
 					<input type="text" placeholder="Email" ng-model="newuser.email">
 				</label>
