--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -76,6 +76,7 @@
     <script src="js/controllers/editServer.js"></script>
     <script src="js/controllers/editUser.js"></script>
     <script src="js/controllers/people.js"></script>
+    <script src="js/controllers/addPerson.js"></script>
     
     <!-- Services -->
     <script src="js/services/shareComponentService.js"></script>
