--- a/src/css/style.css
+++ b/src/css/style.css
@@ -458,6 +458,9 @@
   border-color: #ff4943;
   background-color: #ff4943;
 }*/
+.popup-body {
+  text-align: center;
+}
 #intro-slide-box {
   background: url(../img/index-bg.jpg) no-repeat center center fixed;
   background-size: cover;
