--- a/src/templates/locations.html
+++ b/src/templates/locations.html
@@ -25,7 +25,7 @@
 			<ion-list can-swipe="listCanSwipe">
 			
 			<ion-item ng-repeat="location in locations | orderBy:'name':reverse">
-				<div on-tap="deviceTap('router.addLocation', location)">
+				<div on-tap="deviceTap('router.viewLocation', location)">
 					
 					<i class="icon" ng-class="location.icon"></i>
 					{{ location.name }}
