--- a/src/templates/product-single.html
+++ b/src/templates/product-single.html
@@ -40,7 +40,7 @@
 				<li class="item item-toggle item-icon-left">
 					Featured
 					<label class="toggle toggle-balanced">
-						<input type="checkbox" checked ng-model="singleProduct.featured">
+						<input type="checkbox" checked ng-model="singleProduct.featured" onclick="return false">
 						<div class="track">
 							<div class="handle"></div>
 						</div>
