--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -63,6 +63,7 @@
     <script src="js/controllers/locations.js"></script>
     <script src="js/controllers/addLocation.js"></script>
     <script src="js/controllers/editLocation.js"></script>
+    <script src="js/controllers/viewLocation.js"></script>
     <script src="js/controllers/addProduct.js"></script>
     <script src="js/controllers/addUser.js"></script>
     <script src="js/controllers/Users.js"></script>
@@ -74,15 +75,18 @@
     <script src="js/controllers/servers.js"></script>
     <script src="js/controllers/addServer.js"></script>
     <script src="js/controllers/editServer.js"></script>
+    <script src="js/controllers/viewServer.js"></script>
     <script src="js/controllers/editUser.js"></script>
     <script src="js/controllers/people.js"></script>
     <script src="js/controllers/addPerson.js"></script>
+    <script src="js/controllers/viewPerson.js"></script>
     
     <!-- Services -->
     <script src="js/services/shareComponentService.js"></script>
     <script src="js/services/storeService.js"></script>
     
     <script src="js/directives/mapXively.js"></script>
+    <script src="js/directives/stopEvent.js"></script>
  
 
 </body>
