--- a/src/templates/edit-user.html
+++ b/src/templates/edit-user.html
@@ -11,7 +11,7 @@
 				
 				<label class="item item-input item-stacked-label">
 					<span class="input-label">Password</span>
-					<input type="text" placeholder="Password" ng-model="newuser.password">
+					<input type="password" placeholder="Password" ng-model="newuser.password">
 				</label>
 				
 				<label class="item item-input item-stacked-label">
