--- a/src/templates/people.html
+++ b/src/templates/people.html
@@ -7,20 +7,33 @@
 	         pulling-icon="ion-ios7-arrow-thin-down"
 	         on-refresh="doRefresh()">
      </ion-refresher>		
-			<ion-list can-swipe="listCanSwipe">
-			
+     
+		<ion-list can-swipe="listCanSwipe">
+			<div>
+				<button ng-show="!selectPeople" type="button" class="button button-default" style="margin-bottom:10px;" ng-click="showCheckBoxes()">Show Select People</button>
+				<button ng-show="selectPeople" type="button" class="button button-default" style="margin-bottom:10px;" ng-click="hideCheckBoxes()">Hide Select People</button>
+				
+				<button ng-show="selectPeople" type="button" class="button button-default" style="float:right;" ng-click="test()">Test</button>
+				
+			</div>
 			<ion-item ng-repeat="p in visitors | orderBy:'name':reverse">
 				
+				<div > <!-- on-tap="deviceTap('router.viewPerson',p)" -->
 					
-					<i class="icon" ng-class="p.icon"></i>
+					<input ng-show="selectPeople" type="checkbox" class="checkbox" ng-model="p.checked" /> 
 					{{ p.name }}
-					<ion-option-button class="button-positive" ng-click="delete(p)">
-				      Test
+					<ion-option-button class="button-positive" ng-click="deviceTap('router.viewPerson',p)">
+				      View
 				    </ion-option-button>
+				    <ion-option-button class="button-info" ng-click="testSession(session)">
+				      Test
+				    </ion-option-button>					    
+				    <!-- 
 				    <ion-option-button class="button-info" ng-click="deviceTap('router.editLocation',p)">
 				      Edit
 				    </ion-option-button>
-				    
+				    -->
+				</<div>
 				
 			</ion-item>
 		</ion-list>
