--- a/src/templates/users.html
+++ b/src/templates/users.html
@@ -15,16 +15,18 @@
 						<h2>{{ user.username }}</h2>
 						<p>{{user.lastLogin}} <span ng-show="user.lastLogin == 'Online'" class="balanced">&bull;</span></p>
 						
-						<p><span class="ion-edit" ng-click="editUser('router.edituser',user)" ></span>
-						<span class="ion-ios-close" ng-click="deleteUser(user)"></span></p>
+						<div>
+							<button class="button button-small ion-edit" ng-click="editUser('router.edituser',user)" ></button>
+							<button class="button button-small ion-ios-close" ng-click="deleteUser(user)"></button>
+						</div>
 					</div>
 					
-					<div ng-show="user.showlocation == true" class="item item-image">
+					<!-- <div ng-show="user.showlocation == true" class="item item-image"> -->
 						<!-- <div id="map_{{user.id}}" style="height: 150px;" data-tap-disabled="true"></div> -->
 						<!-- <div id="map_admin" style="height: 150px;" data-tap-disabled="true"></div> -->
 						
 						<div id='map' zoom="14" lat="{{user.lat}}" lng="{{user.lng}}" style="height: 150px;" map-xively></div>
-					</div>
+					<!-- </div> -->
 					<ul class="list">
 						<li class="item item-toggle">
 						User Enabled
