--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -68,6 +68,7 @@
     <script src="js/controllers/addUser.js"></script>
     <script src="js/controllers/Users.js"></script>
     <script src="js/controllers/Devices.js"></script>
+    <script src="js/controllers/Device.js"></script>    
     <script src="js/controllers/settings.js"></script>
     <script src="js/controllers/editDevice.js"></script>
     <script src="js/controllers/Products.js"></script>
