--- a/src/templates/side-menu-left.html
+++ b/src/templates/side-menu-left.html
@@ -86,7 +86,11 @@
 				<a menu-close class="item item-icon-left" href="#/route/add-person">
 					<i class="icon ion-ios-personadd-outline"></i>
 					Add Person
-				</a>				
+				</a>
+				<a menu-close class="item item-icon-left" href="#/route/add-message">
+					<i class="icon ion-ios-email"></i>
+					Add Message
+				</a>
 			</div>
 		</ion-content>
 	</ion-side-menu>
