--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,8 +5,12 @@
     <title>Xively</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <link href="libs/ionic/ionic.css" rel="stylesheet">
+    <link href="libs/angular-carousel/angular-carousel.css" rel="stylesheet" type="text/css" />
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link href="css/base.css" type="css/style" rel="stylesheet"/>
+    <link href="css/style.css" type="css/style" rel="stylesheet"/>
+    <link href="libs/angular-bootstrap-datetimepicker/datetimepicker.css" type="css/style.css" rel="stylesheet">
     
     <script src="libs/chartjs/Chart.js"></script>
     <!--<script src="js/ionic.bundle.min.js"></script>-->
@@ -26,6 +30,13 @@
     <script type="text/javascript" src="libs/angular-socket-io/socket.js"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script type="text/javascript" src="libs/angularfire/angularfire.js"></script>
+    <script type="text/javascript" src="libs/angular-touch/angular-touch.js"></script>
+    <script type="text/javascript" src="libs/angular-carousel/angular-carousel.js"></script>
+    <script type="text/javascript" src="libs/moment/moment.js"></script>
+    <!-- <script type="text/javascript" src="libs/bootstrap/bootstrap.js"></script> -->
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="libs/angular-bootstrap-datetimepicker/datetimepicker.js"></script>
 
     <!--end -->
     <!--<script src="libs/angular-chart.js"></script>-->
@@ -34,6 +45,7 @@
     <script src="js/app.js"></script>
     <script type="text/javascript" src="js/SocketFactory.js"></script>
     <script type="text/javascript" src="js/services/SessionService.js"></script>
+    <script type="text/javascript" src="js/services/Sessions.js"></script>
      <script type="text/javascript" src="js/services/VisitorsService.js"></script>
     <script type="text/javascript" src="js/services/Api.js"></script>
     <script type="text/javascript" src="js/services/Toaster.js"></script>
@@ -81,6 +93,7 @@
     <script src="js/controllers/people.js"></script>
     <script src="js/controllers/addPerson.js"></script>
     <script src="js/controllers/viewPerson.js"></script>
+    <script src="js/controllers/addMessage.js"></script>
     
     <!-- Services -->
     <script src="js/services/shareComponentService.js"></script>
