--- a/src/less/base.less
+++ b/src/less/base.less
@@ -3,22 +3,22 @@
 @word-color:#fff;*/
 
 .bar.bar-balanced {
-    border-color: #ff4943;
-    background-color: #ff4943;
+    border-color: #ff4943!important;
+    background-color: #ff4943!important;
     /*background-image: linear-gradient(0deg,#498f24,#498f24 50%,transparent 50%);*/
-    color: #fff;
+    color: #fff!important;
 }
 
 .button.button-balanced {
-    border-color: #ff4943;
-    background-color: #ff4943;
-    color: #fff;
+    border-color: #ff4943!important;
+    background-color: #ff4943!important;
+    color: #fff!important;
 }
 
 .button.button-balanced.activated, .button.button-balanced.active{
-    border-color:#ff4943;
-    background-color:#ff4943;
-    box-shadow:inset 0 1px 3px rgba(0,0,0,.15)
+    border-color:#ff4943!important;
+    background-color:#ff4943!important;
+    box-shadow:inset 0 1px 3px rgba(0,0,0,.15)!important;
 }
 
 .bar-header-menu{
@@ -26,8 +26,8 @@
 }
 
 .bar.bar-stable .title {
-    background-color:#ff4943;
-    color: #fff;
+    background-color:#ff4943!important;
+    color: #fff!important;
 }
 
 .popup {
@@ -46,5 +46,18 @@
 }*/
 
 .popup-body{
-  text-align:center;
+  text-align:center!important;
+}
+
+
+.carousel{
+  width:500px!important;
+  height: 350px!important;
+  margin-left: auto!important;
+  margin-right: auto!important;
+}
+
+.imageCarousel{
+  width:500px!important;
+  height: 350px!important;
 }
