--- a/src/templates/add-person.html
+++ b/src/templates/add-person.html
@@ -25,7 +25,7 @@
 				</label>
 				
 				<label class="item item-input">
-					<input type="text" placeholder="Zip code" ng-model="new_person.address.zipcode" readonly>
+					<input type="text" placeholder="Zip code" ng-model="new_person.address.zipcode" >
 				</label>				
 				
 				<div class="item item-divider">
