--- a/src/templates/people.html
+++ b/src/templates/people.html
@@ -27,7 +27,10 @@
 				    </ion-option-button>
 				    <ion-option-button class="button-info" ng-click="testSession(session)">
 				      Test
-				    </ion-option-button>					    
+				    </ion-option-button>
+				    <ion-option-button class="button-balanced" ng-click="testTransaction(session)">
+				      Test Transaction
+				    </ion-option-button>
 				    <!-- 
 				    <ion-option-button class="button-info" ng-click="deviceTap('router.editLocation',p)">
 				      Edit
