--- a/src/templates/add-person.html
+++ b/src/templates/add-person.html
@@ -37,7 +37,16 @@
 				</label>
 				<label class="item item-input">
 					<input type="text" placeholder="Zone to" ng-model="new_person.zoneto" readonly>
-				</label>				
+				</label>
+				<label class="item item-input">
+					<input type="text" placeholder="City" ng-model="new_person.city" readonly>
+				</label>
+				<label class="item item-input">
+					<input type="text" placeholder="State" ng-model="new_person.state" readonly>
+				</label>		
+				<label class="item item-input">
+					<input type="text" placeholder="Message" ng-model="new_person.message" readonly>
+				</label>						
 				<div class="item item-divider">
 				Drink
 				</div>				
