--- a/src/templates/add-message.html
+++ b/src/templates/add-message.html
@@ -27,36 +27,40 @@
 				</label>
 				
 				<div class="item item-divider">
-					Date Time
+					Date
 				</div>
 				<div class="row">
 					
 					<div class="col">
-						
-						<div class="dropdown">
-							<span class="input-label">Start</span>
-							<a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target="#" href="#">
-								<div class="input-group"><input type="text" class="form-control" data-ng-model="newmessage.start"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-								</div>
-							</a>
-							<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-								<datetimepicker data-ng-model="newmessage.start" data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }"/>
-							</ul>
-						</div>
+						<ionic-datepicker input-obj="datepickerObject">
+						  <button class="button button-block button-positive"> {{datepickerObject.inputDate | date:'dd - MMMM - yyyy'}}</button>
+						</ionic-datepicker>
+					</div>
 					
+				</div>
+				
+				
+				<div class="item item-divider">
+					Time
+				</div>
+				<div class="row">
+					
+					<div class="col">
+						<span class="input-label">Start</span>
+						<ionic-timepicker input-obj="timePickerObjectStart" style="width:300px">
+						  <button class="button button-block button-positive overflowShow">
+						    {{startHour}}:{{startMinute}}
+						  </button>
+						</ionic-timepicker>
 					</div>
 					
 					<div class="col">
-						 <div class="dropdown">
-						  <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="#" href="#">
-						  	<span class="input-label">End</span>
-						    <div class="input-group"><input type="text" class="form-control" data-ng-model="newmessage.end"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-						    </div>
-						  </a>
-						  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-						    <datetimepicker data-ng-model="newmessage.end" data-datetimepicker-config="{ dropdownSelector: '#dropdown2' }"/>
-						  </ul>
-						</div>
+						<span class="input-label">End</span>
+						<ionic-timepicker input-obj="timePickerObjectEnd" style="width:300px">
+						  <button class="button button-block button-positive overflowShow">
+						    {{endHour}}:{{endMinute}}
+						  </button>
+						</ionic-timepicker>
 					</div>
 					
 				</div>
@@ -64,7 +68,7 @@
 			</div>
 			<div class="padding">
 				<button class="button button-balanced" ng-click="messageSubmit(newmessage)">
-					Add
+					Add Message
 				</button>
 			</div>
 		</form>
