--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,10 +6,10 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <link href="libs/ionic/ionic.css" rel="stylesheet">
     <link href="libs/angular-carousel/angular-carousel.css" rel="stylesheet" type="text/css" />
-    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
     <link href="css/base.css" type="css/style" rel="stylesheet"/>
-    <link href="css/style.css" type="css/style" rel="stylesheet"/>
+    <!--<link href="css/style.css" type="css/style" rel="stylesheet"/> -->
     <link href="libs/angular-bootstrap-datetimepicker/datetimepicker.css" type="css/style.css" rel="stylesheet">
     
     <script src="libs/chartjs/Chart.js"></script>
@@ -34,9 +34,11 @@
     <script type="text/javascript" src="libs/angular-carousel/angular-carousel.js"></script>
     <script type="text/javascript" src="libs/moment/moment.js"></script>
     <!-- <script type="text/javascript" src="libs/bootstrap/bootstrap.js"></script> -->
-    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="libs/angular-bootstrap-datetimepicker/datetimepicker.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> -->
+    <!-- <script type="text/javascript" src="libs/angular-bootstrap-datetimepicker/datetimepicker.js"></script> -->
+    <script src="libs/ionic-timepicker/ionic-timepicker.bundle.min.js"></script>
+    <script src="libs/ionic-datepicker/ionic-datepicker.bundle.min.js"></script>
 
     <!--end -->
     <!--<script src="libs/angular-chart.js"></script>-->
@@ -47,6 +49,7 @@
     <script type="text/javascript" src="js/services/SessionService.js"></script>
     <script type="text/javascript" src="js/services/Sessions.js"></script>
      <script type="text/javascript" src="js/services/VisitorsService.js"></script>
+    <script type="text/javascript" src="js/services/Visitors.js"></script>
     <script type="text/javascript" src="js/services/Api.js"></script>
     <script type="text/javascript" src="js/services/Toaster.js"></script>
     <script type="text/javascript" src="js/services/LSFactory.js"></script>
